# Kubernetes-AIOps-Evidence-Graph

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.daily-logs/: last_update.json
config/temporal/: development.yaml
observability/alertmanager/: alertmanager.yml
observability/grafana/dashboards/: aiops-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
observability/loki/: loki-config.yml
observability/prometheus/: prometheus.yml
observability/prometheus/rules/: aiops-alerts.yaml
observability/tempo/: tempo.yaml
scripts/: init-db.sql
src/: __init__.py
src/config/: __init__.py  promql_queries.yaml  settings.py
src/database/: __init__.py  neo4j.py  postgres.py
src/models/: __init__.py  action.py  evidence.py  hypothesis.py  incident.py
src/services/collectors/: __init__.py  base.py  deploy_diff_collector.py  kubernetes_collector.py  logs_collector.py  metrics_collector.py
src/services/ingestion/: __init__.py  deduplicator.py  main.py  normalizer.py
src/services/integrations/: __init__.py  slack_client.py
src/services/policy/: __init__.py  opa_client.py
src/services/policy/policies/: remediation.rego
src/services/rca/: __init__.py  hypothesis_ranker.py  llm_summarizer.py  rules_engine.py
src/services/remediation/: __init__.py  executor.py  orchestrator.py  verifier.py
src/services/runbook/: __init__.py  generator.py
src/services/workflow/: __init__.py  activities.py  incident_workflow.py  worker.py
src/simulator/: __init__.py  incident_simulator.py
